--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -1,9 +1,107 @@
 @charset "UTF-8";
 
+*{
+    padding: 0;
+    margin: 0;
+}
+/*侧边栏*/
+html,body{
+    height: 100%;
+}
+a{
+    text-decoration: none;
+
+}
+a:link,a:visited,a:hover,a:active{
+    text-decoration: none;
+    /*去掉所有的下划线*/
+}
+
+.table.table-bordered td {
+    text-align: center;
+    vertical-align: middle;
+}
+
 .body_bg{
     background-color: rgb(34, 45, 50);
 }
 .mt_150{
     margin-top: 150px;
 
+}
+.lt_aside{
+    width: 180px;
+    height: 100%;
+    background-color: #222d32;
+    position: absolute;
+    top: 0;
+    left:0;
+}
+.lt_aside .brand{
+
+    width: 180px;
+    height: 50px;
+    font-size: 24px;
+    line-height: 50px;
+    text-align: center;
+}
+.lt_aside .brand a{
+    display: block;
+    background-color:#367fa9;
+    color:white;
+}
+.lt_aside .user img{
+    display: block;
+    margin: 30px auto 0;
+    border-radius: 50%;
+
+}
+.lt_aside .user  p{
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    line-height: 50px;
+}
+.nav li{
+    color:white;
+    /*text-align: center;*/
+
+}
+.nav li a{
+    padding: 10px 0 10px 0;
+    color:white;
+    display: block;
+    padding-left: 40px;
+    border-left: 3px solid transparent;
+    /*下面的now给一个3px的做边框，内容会过来一点不能对齐全，给所有的a标签一个透明的左边框就行*/
+}
+
+.nav li a.now{
+    background-color: #1d1f21;
+    border-left: 3px solid #069;
+}
+.nav li  .second a{
+    padding-top: 8px;
+    display: block;
+  /*div自己会掉下去，不要设置高 给li设置padding*/
+
+    padding-left: 60px;
+}
+/*右边*/
+.lt_main{
+    width: 100%;
+    height: 100%;
+    background-color: pink;
+    padding-left: 180px;
+}
+.lt_header{
+    height: 50px;
+    background-color: #3c8dbc;
+    line-height: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.lt_header a{
+    color:white;
+    font-size: 16px;
 }
