--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -105,3 +105,7 @@ a:link,a:visited,a:hover,a:active{
     color:white;
     font-size: 16px;
 }
+.table td,
+.table th{
+    text-align: center;
+}
