--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -112,3 +112,21 @@ a:link,a:visited,a:hover,a:active{
 .mb_20{
     margin-top: 20px;
 }
+.file_box{
+    width: 82px;
+    height: 34px;
+    position: relative;
+}
+.file_box:hover [type='button']{
+    background-color: #e6e6e6;
+}
+
+/*让file设置成透明度为0*/
+.file_box  [type='file']{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left:0;
+    opacity:0;
+}
