--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -9,7 +9,7 @@ html,body{
 .lt_container{
     width: 100%;
     height: 100%;
-    background-color: pink;
+    /*background-color: pink;*/
     min-width: 320px;
     max-width: 640px;
     margin: 0 auto;
@@ -39,7 +39,7 @@ html,body{
     /*希望中间部分是100%，所以padding给最外面的盒子*/
     width: 100%;
     height: 100%;
-    background-color: green;
+    /*background-color: green;*/
 }
 .lt_header .icon_left,
 .lt_header .icon_right{
@@ -85,3 +85,11 @@ color:#fff;
 
 }
 /*transform:translateZ(0);的意思：开启GPU(显卡)加速。因为由浏览器的缓慢的软件渲染引擎来执行，执行起来慢*/
+.lt_footer li.now a{
+    /*设置选中的样式 */
+    color:darkorange;
+
+}
+.lt_footer li.now p{
+    color:darkorange;
+}
