--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -37,6 +37,10 @@ a:link,a:visited,a:hover,a:active{
     top: 0;
     left:0;
     z-index: 999;
+    transition:all 1s;
+}
+.lt_aside.now{
+    left:-180px;
 }
 .lt_aside .brand{
 
@@ -95,7 +99,12 @@ a:link,a:visited,a:hover,a:active{
     background-color: pink;
     padding-left: 180px;
     padding-top: 70px;
+    transition:all 1s;
 }
+.lt_main.now{
+    padding-left: 15px;
+}
+
 .lt_header{
     height: 50px;
     background-color: #3c8dbc;
