--- a/public/front/css/searchList.css
+++ b/public/front/css/searchList.css
@@ -40,9 +40,9 @@ ul,li,ol{
 }
 @keyframes play {
     from{
-        transform: rotate(0deg);
+        transform: translateX(-50%) rotate(0deg);
     }
     to{
-        transform: rotate(360deg);
+        transform: translateX(-50%) rotate(360deg);
     }
 }
